# airflow-dbt

./: .flake8  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: pypi.yaml  test.yml
airflow_dbt/: __init__.py  __version__.py  dbt_command_config.py  dbt_command_params.py
airflow_dbt/hooks/: __init__.py  base.py  cli.py  dbt_google_hook.py  dbt_hook.py  google.py
airflow_dbt/operators/: __init__.py  dbt_operator.py  google.py
tests/hooks/: test_dbt_hook.py
tests/operators/: test_dbt_operator.py
